bin_PROGRAMS = plbpd
plbpd_SOURCES =  \
	agglomerate.hpp \
	bgk.cpp \
	bgk.hpp \
	boundary.cpp \
	boundary.hpp \
	comm.cpp \
	comm.hpp \
	config.hpp \
	config.cpp \
	D2Q9.hpp \
	D3Q19.hpp \
	D3Q27.hpp \
	domain.cpp \
	domain.hpp \
	error.cpp \
	error.hpp \
	global.hpp \
	input.cpp \
	input.hpp \
	lattice.cpp \
	lattice.hpp \
	lb_dynamics.cpp \
	lb_dynamics.hpp \
	main.cpp\
	memory.hpp \
	MersenneTwister/MersenneTwister.h \
	model.cpp \
	model.hpp \
	mrt.cpp \
	mrt.hpp \
	ode.cpp \
	ode.hpp \
	output.cpp \
	output.hpp \
	p_dynamics.cpp \
	p_dynamics.hpp \
	plbpd.cpp \
	plbpd.hpp \
	pointers.hpp \
	primary.hpp \
        restart.hpp \
        restart.cpp \
	th_dynamics.hpp \
	th_dynamics.cpp \
	timer.cpp \
	timer.hpp \
	tuples.hpp \
	utils.cpp \
	utils.hpp

